<resources>
    <string name="search_providers_list_key" translatable="false">search_providers_list</string>
    <string name="locale_key" translatable="false">app_locale</string>
    <string name="search_types_list_key" translatable="false">search_type_list</string>
    <string name="auto_update_key" translatable="false">auto_update</string>
    <string name="skip_update_key" translatable="false">skip_update_key</string>
    <string name="prerelease_update_key" translatable="false">prerelease_update</string>
    <string name="manual_check_update_key" translatable="false">manual_check_update</string>
    <string name="fast_forward_button_time_key" translatable="false">fast_forward_button_time</string>
    <string name="benene_count" translatable="false">benene_count</string>
    <string name="subtitle_settings_key" translatable="false">subtitle_settings_key</string>
    <string name="subtitle_settings_chromecast_key" translatable="false">subtitle_settings_chromecast_key</string>
    <string name="quality_pref_key" translatable="false">quality_pref_key</string>
    <string name="prefer_limit_title_key" translatable="false">prefer_limit_title_key</string>
    <string name="prefer_limit_title_rez_key" translatable="false">prefer_limit_title_rez_key</string>
    <string name="video_buffer_size_key" translatable="false">video_buffer_size_key</string>
    <string name="video_buffer_length_key" translatable="false">video_buffer_length_key</string>
    <string name="video_buffer_clear_key" translatable="false">video_buffer_clear_key</string>
    <string name="video_buffer_disk_key" translatable="false">video_buffer_disk_key</string>
    <string name="prerelease_commit_hash" translatable="false">unknown_prerelease</string>
    <string name="use_system_brightness_key" translatable="false">use_system_brightness_key</string>
    <string name="swipe_enabled_key" translatable="false">swipe_enabled_key</string>
    <string name="playback_speed_enabled_key" translatable="false">playback_speed_enabled_key</string>
    <string name="player_resize_enabled_key" translatable="false">player_resize_enabled_key</string>
    <string name="pip_enabled_key" translatable="false">pip_enabled_key</string>
    <string name="double_tap_enabled_key" translatable="false">double_tap_enabled_key</string>
    <string name="double_tap_pause_enabled_key" translatable="false">double_tap_pause_enabled_key</string>
    <string name="double_tap_seek_time_key" translatable="false">double_tap_seek_time_key</string>
    <string name="swipe_vertical_enabled_key" translatable="false">swipe_vertical_enabled_key</string>
    <string name="display_sub_key" translatable="false">display_sub_key</string>
    <string name="show_fillers_key" translatable="false">show_fillers_key</string>
    <string name="random_button_key" translatable="false">random_button_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="dns_key" translatable="false">dns_key</string>
    <string name="download_path_key" translatable="false">download_path_key</string>
    <string name="nginx_url_key" translatable="false">nginx_url_key</string>
    <string name="syncplay_address_key" translatable="false">syncplay_address_key</string>
    <string name="syncplay_port_key" translatable="false">syncplay_port_key</string>
    <string name="syncplay_room_key" translatable="false">syncplay_room_key</string>
    <string name="syncplay_username_key" translatable="false">syncplay_username_key</string>
    <string name="syncplay_password_key" translatable="false">syncplay_password_key</string>
    <string name="nginx_credentials" translatable="false">nginx_credentials</string>
    <string name="nginx_info" translatable="false">nginx_info</string>
    <string name="syncplay_info" translatable="false">syncplay_info</string>
    <string name="app_name_download_path" translatable="false">Cloudstream</string>
    <string name="app_layout_key" translatable="false">app_layout_key</string>
    <string name="primary_color_key" translatable="false">primary_color_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="killswitch_key" translatable="false">killswitch_key</string>
    <string name="backup_key" translatable="false">backup_key</string>
    <string name="prefer_media_type_key" translatable="false">prefer_media_type_key</string>
    <string name="app_theme_key" translatable="false">app_theme_key</string>
    <string name="episode_sync_enabled_key" translatable="false">episode_sync_enabled_key</string>
    <string name="log_enabled_key" translatable="false">log_enabled_key</string>
    <string name="show_logcat_key" translatable="false">show_logcat_key</string>
    <string name="bottom_title_key" translatable="false">bottom_title_key</string>
    <string name="poster_ui_key" translatable="false">poster_ui_key</string>
    <string name="extra_info_format" translatable="false" formatted="true">%d %s | %sMB</string>
    <string name="storage_size_format" translatable="false" formatted="true">%s • %sGB</string>
    <string name="download_size_format" translatable="false" formatted="true">%sMB / %sMB</string>
    <string name="mb_format" translatable="false" formatted="true">%dMB</string>
    <string name="episode_name_format" translatable="false" formatted="true">%s %s</string>
    <string name="ffw_text_format" translatable="false" formatted="true">+%d</string>
    <string name="rew_text_format" translatable="false" formatted="true">-%d</string>
    <string name="ffw_text_regular_format" translatable="false" formatted="true">%d</string>
    <string name="rew_text_regular_format" translatable="false" formatted="true">%d</string>
    <string name="rating_format" translatable="false" formatted="true">%.1f/10.0</string>
    <string name="year_format" translatable="false" formatted="true">%d</string>
    <string name="app_dub_sub_episode_text_format" formatted="true">%s Ep %d</string>
    <string name="cast_format" formatted="true">Cast: %s</string>
    <string name="result_poster_img_des">Poster</string>
    <string name="search_poster_img_des">@string/result_poster_img_des</string>
    <string name="episode_poster_img_des">Episode Poster</string>
    <string name="home_main_poster_img_des">Main Poster</string>
    <string name="home_next_random_img_des">Next Random</string>
    <string name="episode_play_img_des" translatable="false">@string/play_episode</string>
    <string name="go_back_img_des">Go back</string>
    <string name="change_providers_img_des" translatable="false">@string/home_change_provider_img_des</string>
    <string name="home_change_provider_img_des">Change Provider</string>
    <string name="preview_background_img_des">Preview Background</string>
    <string name="player_speed_text_format" formatted="true">Speed (%.2fx)</string>
    <string name="rated_format" formatted="true">Rated: %.1f</string>
    <string name="new_update_format" formatted="true">New update found!\n%s -> %s</string>
    <string name="filler" formatted="true">Filler</string>
    <string name="duration_format" formatted="true">%d min</string>
    <string name="app_name">CloudStream</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    <string name="search_hint">Search…</string>
    <string name="search_hint_site" formatted="true">Search %s…</string>
    <string name="no_data">No Data</string>
    <string name="episode_more_options_des">More Options</string>
    <string name="next_episode">Next episode</string>
    <string name="result_plot" translatable="false">@string/synopsis</string>
    <string name="result_tags">Genres</string>
    <string name="result_share">Share</string>
    <string name="result_open_in_browser">Open In Browser</string>
    <string name="skip_loading">Skip Loading</string>
    <string name="loading_chromecast">Loading…</string>
    <string name="type_watching">Watching</string>
    <string name="type_on_hold">On-Hold</string>
    <string name="type_completed">Completed</string>
    <string name="type_dropped">Dropped</string>
    <string name="type_plan_to_watch">Plan to Watch</string>
    <string name="type_none">None</string>
    <string name="type_re_watching">Rewatching</string>
    <string name="play_movie_button">Play Movie</string>
    <string name="play_torrent_button">Stream Torrent</string>
    <string name="pick_source">Sources</string>
    <string name="pick_subtitle">Subtitles</string>
    <string name="reload_error">Retry connection…</string>
    <string name="go_back">Go Back</string>
    <string name="play_episode">Play Episode</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading</string>
    <string name="download_paused">Download Paused</string>
    <string name="download_started">Download Started</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_canceled">Download Canceled</string>
    <string name="download_done">Download Done</string>
    <string name="download_format" translatable="false">%s - %s</string>
    <string name="error_loading_links_toast">Error Loading Links</string>
    <string name="download_storage_text">Internal Storage</string>
    <string name="app_dubbed_text">Dub</string>
    <string name="app_subbed_text">Sub</string>
    <string name="popup_delete_file">Delete File</string>
    <string name="popup_play_file">Play File</string>
    <string name="popup_resume_download">Resume Download</string>
    <string name="popup_pause_download">Pause Download</string>
    <string name="pref_disable_acra">Disable automatic bug reporting</string>
    <string name="home_more_info">More info</string>
    <string name="home_expanded_hide">Hide</string>
    <string name="home_play">Play</string>
    <string name="home_info">Info</string>
    <string name="filter_bookmarks">Filter Bookmarks</string>
    <string name="error_bookmarks_text">Bookmarks</string>
    <string name="action_remove_from_bookmarks">Remove</string>
    <string name="action_add_to_bookmarks">Set watch status</string>
    <string name="sort_apply">Apply</string>
    <string name="sort_cancel">Cancel</string>
    <string name="sort_copy">Copy</string>
    <string name="sort_close">Close</string>
    <string name="sort_clear">Clear</string>
    <string name="sort_save">Save</string>
    <string name="player_speed">Player Speed</string>
    <string name="subtitles_settings">Subtitle Settings</string>
    <string name="subs_text_color">Text Color</string>
    <string name="category_nginx">Nginx</string>
    <string name="category_syncplay">Syncplay</string>
    <string name="category_credits">Credits and account</string>
    <string name="category_updates">Updates and backup</string>
    <string name="syncplay_info_title">What is Syncplay ?</string>
    <string name="syncplay_info_summary">Pausing, unpausing and seeking are synchronized over the Internet, giving everyone playing the same file in the same virtual room a shared viewing experience. Use alongside VoIP software, e.g. Mumble,Discord or Telegram.</string>
    <string name="syncplay_address_pref" translatable="false">Syncplay Address</string>
    <string name="syncplay_port_pref" translatable="false">Syncplay Port</string>
    <string name="syncplay_room_pref" translatable="false">Syncplay Room</string>
    <string name="syncplay_username_pref" translatable="false">Syncplay Username</string>
    <string name="syncplay_password_pref" translatable="false">Syncplay password</string>
    <string name="category_preferred_media_and_lang">Preferred media and language</string>
    <string name="category_ui">User interface</string>
    <string name="category_player">Player</string>
</resources>