<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:icon="@color/transparent" />

    <EditTextPreference
        android:defaultValue="syncplay.pl"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:key="@string/syncplay_address_key"
        android:title="@string/syncplay_address_pref"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="8995"
        android:digits="0123456789"
        android:icon="@drawable/ic_baseline_electrical_services_24"
        android:inputType="numberDecimal"
        android:key="@string/syncplay_port_key"
        android:title="@string/syncplay_port_pref"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:icon="@drawable/ic_baseline_meeting_room_24"
        android:key="@string/syncplay_room_key"
        android:title="@string/syncplay_room_pref"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:icon="@drawable/ic_baseline_verified_user_24"
        android:key="@string/syncplay_username_key"
        android:title="@string/syncplay_username_pref"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:icon="@drawable/ic_baseline_verified_user_24"
        android:key="@string/syncplay_password_key"
        android:title="@string/syncplay_password_pref" />
    <Preference
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:key="@string/syncplay_info"
        android:summary="@string/syncplay_info_summary"
        android:title="@string/syncplay_info_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://syncplay.pl" />
    </Preference>
</PreferenceScreen>